<resources>
    <string name="app_name">PAPL-887062</string>
    <string name="closeButtonDescription">Close the application</string>
    <string name="backButtonDescription">Return to the previous screen</string>
    <string name="homepageText">Should I work out today?</string>
    <string name="messagePrompt">Click to continue</string>
    <string name="heptagon">Navigation Heptagon</string>
    <string name="emptyOption">No option available</string>
    <string name="node01_01">Yes, I feel great!</string>
    <string name="node01_02">No, not at all</string>
    <string name="node01_03">I guess, but&#8230;</string>
    <string name="node01Question">Do you feel good today?</string>
    <string name="node03Question">Buuuuuuuuut?</string>
    <string name="decisionNodePrompt">Click on an emoji to see the description</string>
    <string name="message01Prompt">Well it sucks that you feel like that, if I\'m honest</string>
    <string name="node02Question">So, what\'s up?</string>
    <string name="node02_01">I don\'t feel well</string>
    <string name="node02_02">To be honest, I\'m hungover</string>
    <string name="node02_03">Bad day, very angry</string>
    <string name="node02_04">My anxiety is really high today, I can\'t handle the other people</string>
    <string name="node02_05">I\m in pain!</string>
    <string name="node02_06">I\'m really tired</string>
    <string name="node02_07">My depression is bad today. I don\'t even want to get out of bed</string>
    <string name="Node04Question">What kind of unwell are we talking?</string>
    <string name="message04Prompt">Definitely rehydrate then. Sounds like you would benefit from getting some of those toxins out of your system!</string>
    <string name="message07Prompt">Do you know what\'s great for that?</string>
    <string name="message05Prompt">Trust me, everyone in the gym is worried about themselves. You can do this!</string>
    <string name="node05Question">Are you sore, or injured?</string>
    <string name="node06Question">Do you need to be at the gym to exercise?</string>
    <string name="node07Question">Did you get at least 6 hours sleep last night?</string>
    <string name="message09Prompt">I know it\'s hard, but the endorphins will help. Even if you just do the bare minimum, you\'ll feel better</string>
    <string name="node03_01">Can\'t get to the gym today</string>
    <string name="node03_02">It\'s my rest day, dammit!</string>
    <string name="node03_03">It is raining though</string>
    <string name="node03_04">I don\'t have a lot of time today</string>
    <string name="message02Prompt">Oh, really&#8230;?</string>
    <string name="message03Prompt">Well, if you say so</string>
    <string name="node04_01">Sniffles, sore throat (no mucus), but nothing in the chest</string>
    <string name="node04_02">Chest cold, stomach bug or producing mucus</string>
    <string name="node04_03">I have a headache</string>
    <string name="message06Prompt">It\'s understandable not wanting to spread that</string>
    <string name="node05_01">Just sore</string>
    <string name="node05_02">Genuinely injured!</string>
    <string name="message08Prompt">That does not sound good, make sure you seek medical advice if needed</string>
    <string name="node08Question">Are you sure about that?</string>
    <string name="node09Question">Really, REALLY sure?</string>
    <string name="node08_01">Yes, I\'m sure</string>
    <string name="node08_02">No, I guess I could make some time</string>
    <string name="node09_01">Yes, I\'m busy all day and won\'t even have time to browse on my phone!</string>
    <string name="node09_02">No, I guess not</string>
    <string name="node10Question">Assuming clearance from your doctor, can you exercise a different body part?</string>
    <string name="node10_01">I suppose I can, yes</string>
    <string name="node10_02">Doctor has said no!</string>
    <string name="node10_03">No, I\'m paralysed from the neck down and in hospital as we speak!</string>
    <string name="message10Prompt">Listen to your doctor!</string>
    <string name="node11Question">Can you access the internet?</string>
    <string name="node11_01">Yes, I have internet access</string>
    <string name="node11_02">No, I\'m Amish and/or didn\'t pay my bill</string>
    <string name="node06_01">Yes, I really do</string>
    <string name="node06_02">No, I suppose I do have alternatives</string>
    <string name="node07_01">Yes, I did indeed</string>
    <string name="node07_02">Honestly, no. I put Netflix on last night and one thing led to another&#8230;</string>
    <string name="message11Prompt">Good job YouTube has plenty of at home workouts!</string>
    <string name="node12Question">Can you go for a run outside?</string>
    <string name="node12_01">Yes, I forgot I have legs!</string>
    <string name="node12_02">No, there is a black hole outside my door and I\'m trapped</string>
    <string name="message12Prompt">I think you know what I am going to say&#8230;</string>
    <string name="message13Prompt">A black hole!? Dayum&#8230;</string>
    <string name="message14Prompt">Do you hear the words coming out of your mouth?</string>
    <string name="dontExercisePrompt">Fine, fine. Don\'t exercise then</string>
    <string name="exerciseThenPrompt">Exercise! What are you waiting for!?</string>
    <string name="node01_01_TMessage">As you feel so good, there\'s no reason not to work out, time to get sweaty!</string>
    <string name="node04_01_TMessage">If your symptoms are not severe and you generally feel OK, then you can exercise. \nHowever, it is important not to exercise if you have a fever. A fever is when your body\'s temperature is >= 38C</string>
    <string name="message07_TMessage">I know it\’s hard. I also know you can do this. I believe in you!"</string>
    <string name="node07_01_TMessage">You might feel that exercise is the last thing on your mind. But, in fact, regular exercise will make you feel less tired in the long run, so you\'ll have more energy.</string>
    <string name="node10_01_TMessage">But be careful, if you feel any pain when exercising make sure you stop immediately, and consult medical advice</string>
    <string name="message09_TMessage">Research shows that physical activity can also boost self-esteem, mood, sleep quality and energy, as well as reducing your risk of stress, depression, dementia and Alzheimer\'s disease.</string>
    <string name="node12_01_TMessage">Start each run with a gentle warm-up of at least 5 minutes. This can include quick walking, marching on the spot, knee lifts, side stepping and climbing stairs</string>
    <string name="message11_TMessage">I will recommend some bodyweight workouts you can do. If none of these are suitable Youtube is your best friend!</string>
    <string name="message14_TMessage">For trying to use such a silly excuse, I suggest you add 25 burpees to your workout as punishment!\n(No obligation, but a kitten will cry if you don\'t)</string>
    <string name="message12_TMessage">Even if you only spend 30 minutes working out, it will be worth it</string>
    <string name="message06_TMessage">Rest up, drink plenty of fluids and I hope you feel better soon. Thank you for not spreading your lurgy to the rest of us!</string>
    <string name="node07_02_TMessage">Take today as a rest day, avoid caffeine and try to get an early night. Tomorrow is another day!</string>
    <string name="message10_TMessage">If you\'re doctor has ordered you to rest, why on earth are you using this app!? Don\'t be foolish, make sure you recover</string>
    <string name="node10_03_TMessage">It is extremely impressive that you\'re able to use this app in your current condition. Almost makes it unbelievable&#8230;</string>
    <string name="message03_TMessage">Rest days are important, and you\'ve earned this! Enjoy your day off, and we\'ll see you back in the gym tomorrow!</string>
    <string name="node09_01_TMessage">We all have days where we are too busy, but often we can find time if we practice some time management skills. Use today as a learning experience.</string>
    <string name="acceptWorkoutButton">Accept</string>
    <string name="rejectWorkoutButton">Reject</string>
    <string name="noRecommendations">That\'s all of the recommendations I have, sorry I couldn\'t be of more help. Google and YouTube are your best friends now</string>
    <string name="finishButton">Finish</string>
    <string name="acceptWorkoutPrompt">Thank you for using me, I hope you enjoy your workout!</string>
    <string name="mainExerciseTitle">Main exercises:</string>
    <string name="accessoryExerciseTitle">Accessory exercises (optional):</string>
    <string name="mainRepScheme">3x5</string>
    <string name="accessoryRepScheme">4x8</string>
    <string name="backSquat">Back Squat</string>
    <string name="bbBench">Barbell Bench Press</string>
    <string name="bbRow">Barbell Row</string>
    <string name="wLunges">Weighted Lunges</string>
    <string name="inclineDbBench">Incline Dumbbell Bench Press</string>
    <string name="lPulldown">Lateral Pulldown</string>
    <string name="deadlift">Conventional Deadlift</string>
    <string name="bbOhp">Barbell Overhead Press</string>
    <string name="pullups">Pull Ups (Weighted if possible)</string>
    <string name="frontSquat">Front Squat</string>
    <string name="dbOhp">Dumbbell Overhead Press</string>
    <string name="seatedRow">Seated Row</string>
    <string name="dbRow">Dumbbell Row</string>
    <string name="pendlay">Pendlay Row</string>
    <string name="dips">Dips</string>
    <string name="splitSquat">Split Squat</string>
    <string name="hamstringCurl">Hamstring Curl</string>
    <string name="plank30">30 Second Plank Hold</string>
    <string name="romDeadlift">Romanian Deadlift</string>
    <string name="gobletSquat">Goblet Squat</string>
    <string name="cardio1">20 Minutes Stationary Bike \nHIIT Circuit: \n21&#8211;15&#8211;9 \nKettlebell Swings \nBurpees \nDouble Unders</string>
    <string name="cardio2">30 Minutes Treadmill \nHIIT Circuit: \n3 Rounds For Time: \n20m Sled Push \n10 Pull Ups \n10 Burpees</string>
    <string name="easyWorkout1">Dynamic Stretching to Warm Up \nGo Jogging \nIt really is that simple</string>
    <string name="easyWorkout2">Yoga: Sun Salutations \nMountain Pose \nUpward Salute \nStanding Forward Bend \nPlank Pose \nUpward Facing Dog \nDownward Facing Dog \nStanding Forward Bend \nRepeat as needed</string>
    <string name="airSquat">Air Squat</string>
    <string name="pushups">Push Ups</string>
    <string name="invertRow">Inverted Rows (Pull Ups if possible)</string>
    <string name="pistols">Pistol Squats</string>
    <string name="diamondPushups">Diamond Push Ups</string>
    <string name="unwellUrl1">https://www.nhs.uk/conditions/diarrhoea-and-vomiting/</string>
    <string name="unwellMessage1">Diarrhoea and Vomiting</string>
    <string name="unwellUrl2">https://www.nhs.uk/conditions/common-cold/</string>
    <string name="unwellMessage2">The Common Cold</string>
    <string name="tiredUrl1">https://www.nhs.uk/live-well/sleep-and-tiredness/why-lack-of-sleep-is-bad-for-your-health/</string>
    <string name="tiredMessage1">Effects of Insomnia</string>
    <string name="tiredUrl2">https://www.nhs.uk/live-well/sleep-and-tiredness/how-to-get-to-sleep/</string>
    <string name="tiredMessage2">Sleep Tips</string>
    <string name="docOrdersUrl1">https://www.nhs.uk/conditions/sports-injuries/</string>
    <string name="docOrdersMessage1">\"While recovering, it\'s important not to do too much too soon – aim to increase your level of activity gradually over time.\"</string>
    <string name="tetraplegiaUrl1">https://www.nhs.uk/conditions/paralysis/</string>
    <string name="tetraplegiaMessage1">Just in case&#8230;</string>
    <string name="restUrl1">https://www.menshealth.com/entertainment/a28169196/the-rock-cheat-day-meals/</string>
</resources>