<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Node02">

    <ImageView
        android:id="@+id/heptagon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/heptagon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/heptagon" />

    <ImageView
        android:id="@+id/option1"
        android:layout_width="74dp"
        android:layout_height="76dp"
        android:contentDescription="@string/node02_01"
        android:onClick="onClickOption1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/heptagon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265"
        app:srcCompat="@drawable/face_with_thermometer_1f912" />

    <ImageView
        android:id="@+id/option2"
        android:layout_width="74dp"
        android:layout_height="76dp"
        android:contentDescription="@string/node02_02"
        android:onClick="onClickOption2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="@+id/heptagon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37"
        app:srcCompat="@drawable/beer_mug_1f37a" />

    <ImageView
        android:id="@+id/option3"
        android:layout_width="74dp"
        android:layout_height="76dp"
        android:contentDescription="@string/node02_03"
        android:onClick="onClickOption3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="@+id/heptagon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37"
        app:srcCompat="@drawable/angry_face_1f620" />

    <ImageView
        android:id="@+id/option4"
        android:layout_width="74dp"
        android:layout_height="76dp"
        android:contentDescription="@string/node02_04"
        android:onClick="onClickOption4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="@+id/heptagon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583"
        app:srcCompat="@drawable/face_with_open_mouth_and_cold_sweat_1f630" />

    <ImageView
        android:id="@+id/option5"
        android:layout_width="74dp"
        android:layout_height="76dp"
        android:contentDescription="@string/node02_05"
        android:onClick="onClickOption5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="@+id/heptagon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583"
        app:srcCompat="@drawable/face_with_head_bandage_1f915" />

    <ImageView
        android:id="@+id/option6"
        android:layout_width="74dp"
        android:layout_height="76dp"
        android:contentDescription="@string/node02_06"
        android:onClick="onClickOption6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="@+id/heptagon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743"
        app:srcCompat="@drawable/tired_face_1f62b" />

    <ImageView
        android:id="@+id/option7"
        android:layout_width="74dp"
        android:layout_height="76dp"
        android:contentDescription="@string/node02_07"
        android:onClick="onClickOption7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="@+id/heptagon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743"
        app:srcCompat="@drawable/pensive_face_1f614" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/backButtonDescription"
        android:onClick="onClickBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/question02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/node02Question"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/option1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heptagon"
        app:layout_constraintVertical_bias="0.704" />

    <TextView
        android:id="@+id/prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/decisionNodePrompt"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/heptagon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option1"
        app:layout_constraintVertical_bias="0.94" />

</androidx.constraintlayout.widget.ConstraintLayout>